manifests/media/plex/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: plex
  name: plex
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
      - image: hotio/plex
        name: plex
        ports:
        - containerPort: 32400
        volumeMounts:
          - name: media-store
            mountPath: /mnt/media
          - name: plex-appdata
            mountPath: /config
      volumes:
      - name: media-store
        nfs:
          server: nas.lan
          path: /mass-zfs-unreliable/media
          readOnly: true
      - name: plex-appdata
        persistentVolumeClaim:
           claimName: plex-appdata
