manifests/media/plex/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  labels:
    app: plex
  namespace: media
spec:
  selector:
    app: plex
  type: LoadBalancer
  loadBalancerIP: 192.168.45.55
  ports:
    - protocol: TCP
      port: 32400
      targetPort: 32400
